# CV-assignment

./: .gitignore  notebook.ipynb  portfolio_2.ipynb  pyproject.toml
